Implemented build module for libmicrohttpd.

--- a/appl/POSIX/Makefile
+++ b/appl/POSIX/Makefile
@@ -195,6 +195,8 @@ LDFLAGS = -static -nostdlib
 # Fully working modules
 include $(MAKE_INCLUDE_DIR)/simple_project.mk
 #include $(MAKE_INCLUDE_DIR)/patric_gbs_a5.mk
+include $(MAKE_INCLUDE_DIR)/libmicrohttpd.mk
+include $(MAKE_INCLUDE_DIR)/microhttpd_demo.mk
 
 # C++ Test
 include $(MAKE_INCLUDE_DIR)/llvm_libcxx.mk
